# yyblog

./: .gitignore  README.md  pyproject.toml
yyblog/: manage.py
yyblog/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
yyblog/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
yyblog/blog/static/css/: blog.css
yyblog/blog/templates/: pagination.html
yyblog/blog/templates/blog/: base.html
yyblog/blog/templates/blog/post/: detail.html  list.html  search.html
yyblog/blog/templates/blog/post/includes/: comment_form.html  search_form.html
yyblog/blog/templatetags/: blog_tags.py
yyblog/cv/: urls.py  views.py
yyblog/frontend/static/css/: blog.css
yyblog/frontend/templates/: pagination.html
yyblog/frontend/templates/blog/: base.html
yyblog/frontend/templates/blog/post/: search.html
yyblog/frontend/templates/blog/post/includes/: comment_form.html
yyblog/yyblog/: asgi.py  settings.py  urls.py  wsgi.py
