[tool.poetry]
name = "yyblog"
version = "0.1.0"
description = "my blog"
authors = ["igor tereschuk"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg = {extras = ["binary"], version = "^3.1.10"}
django-taggit = "^4.0.0"
markdown = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
